# Portofoliu-Popa-Rares

./: .gitignore  .gitmodules  README.md
C#/WebApi1/: WebApplication1.sln
C#/WebApi1/WebApplication1/: Program.cs  WebApplication1.csproj
C++/DSA/IteratedList DLL/: CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
C++/DSA/Matrix  Hashtable/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Lab 4.docx  Matrix.cpp  Matrix.h  ShortTest.cpp
C++/DSA/SortedMap BST/: CMakeLists.txt  SMIterator.cpp  SMIterator.h  SortedMap.cpp  SortedMap.h
C++/DSA/SortedMultiMap BST/: CMakeLists.txt  Lab 5.docx  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
C++/DSA/SortedSet BST/: CMakeLists.txt  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
C++/Fruit App/: CMakeLists.txt  main.cpp
C++/Fruit App/Controller/: fruit_controller.cpp  fruit_controller.h
C++/Fruit App/Domain/: fruit.cpp  fruit.h
C++/Fruit App/Repository/: fruit_repo.cpp  fruit_repo.h  fruits.txt
C++/Fruit App/Tests/: tests.cpp
C++/Fruit App/UI/: fruit_ui.cpp  fruit_ui.h
Java/Banking System/: .gitignore  README.md  pom.xml
Java/Car Dealership (OOP)/: test.csv  vehicles.csv
Java/Car Dealership (OOP)/src/: Main.java
Java/Quiz App JavaFX/: questions.csv
Java/Quiz App JavaFX/src/: QuizApp.java
Python/MHP Hackathon/: README.md  forms.py
Python/MHP Hackathon/instance/: posts.db
Python/Portofolio_site/: main.py
Python/Restaurant App/: Menu.csv  app.py  bestellungen.json  kunden.json
Python/Snake Game/: food.py  main.py  scoreboard.py  snake.py
Python/Text-to-morse/: main.py
Web/AVX Online Shop/: README.md
Web/CV Site/: index.html  index.js  styles.css
Web/EveX (React - SpringBoot Microservices)/: .gitignore  README.md
Web/Flights Search - Tequila API/: README.md  index.js  package-lock.json
Web/Keeper App - React/: README.md
Web/QR Code Generator/: README.md  index.js  package-lock.json  package.json
(+446 files in other folders)
